--- a/.tmux.conf
+++ b/.tmux.conf
@@ -7,3 +7,11 @@ bind 'c' new-window -c "#{pane_current_path}"
 # set -g mouse-select-pane on
 # set -g mouse-resize-pane on
 # set -g mouse-select-window on
+
+#Set prefix to Ctrl+Space
+unbind C-b
+set -g prefix C-Space
+bind Space send-prefix
+
+
+
