--- a/.tmux.conf
+++ b/.tmux.conf
@@ -15,3 +15,11 @@ bind Space send-prefix
 
 
 
+#Vim Mode Panel Selection
+bind k selectp -U # switch to panel Up
+bind j selectp -D # switch to panel Down 
+bind h selectp -L # switch to panel Left
+bind l selectp -R # switch to panel Right
+
+
+
