--- a/myplaybook.yml
+++ b/myplaybook.yml
@@ -37,6 +37,11 @@
           lineinfile: 
             dest: /home/bhenkel/.bashrc 
             line: alias svndiff='svn diff --diff-cmd=svndiff.sh'
+
+        - name: Setting gitdiff to vimdiff
+          lineinfile: 
+            dest: /home/bhenkel/.bashrc 
+            line: alias gitdiff='git difftool -t vimdiff -y'
     
 
 
