adding key bindings to resize panes

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -22,4 +22,9 @@ bind h selectp -L # switch to panel Left
 bind l selectp -R # switch to panel Right
 
 
+#Ctrl+b+Up/Down/Left/Right will adjust the pane size
+bind-key -n C-b-Up resize-pane -U 15
+bind-key -n C-b-Down resize-pane -D 15
+bind-key -n C-b-Left resize-pane -L 15
+bind-key -n C-b-Right resize-pane -R 15
 
