--- a/.tmux.conf
+++ b/.tmux.conf
@@ -28,3 +28,7 @@ bind-key -n C-b-Down resize-pane -D 15
 bind-key -n C-b-Left resize-pane -L 15
 bind-key -n C-b-Right resize-pane -R 15
 
+#Select Pane with mouse
+set -g mouse-select-pane on
+#Resize Pane with mouse
+set -g mouse-resize-pane on
