re-enabling vim colors in tmux

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -32,3 +32,8 @@ bind-key -n C-b-Right resize-pane -R 15
 set -g mouse-select-pane on
 #Resize Pane with mouse
 set -g mouse-resize-pane on
+
+#Allow vim colors to appear in tmux
+set -g default-terminal "xterm-256color"
+#Put this in .bashrc:
+#export TERM="screen-256color"
