--- a/myplaybook.yml
+++ b/myplaybook.yml
@@ -112,7 +112,7 @@
             argv: 
                 - make
 
-        - name: VIM Plugin YouCompleteMe
+        - name: VIM Plugin YouCompleteMe Download
           git:
               repo: 'https://github.com/Valloric/YouCompleteMe.git'
               clone: yes
@@ -122,10 +122,32 @@
           command:
           args:
             chdir: "{{ ansible_env.HOME }}/.vim/pack/default/start/YouCompleteMe"
+            creates: third_party/ycmd/ycm_core.so
             argv: 
                 - python3
                 - install.py
                 - --clang-completer
+
+        - name: TMUX 2 Download
+          git:
+              repo: 'https://github.com/tmux/tmux.git'
+              clone: yes
+              dest: "./github/tmux/"
+
+        - name: TMUX Build 
+          command: sh ./autogen.sh
+          args: 
+            chdir: ./github/tmux/
+
+        - name: TMUX Configure
+          command: ./configure --prefix={{ansible_env.HOME}}/tmux-2.x/
+          args: 
+            chdir: ./github/tmux/
+
+        - name: TMUX Make Install
+          command: make install
+          args: 
+            chdir: ./github/tmux/
     
 
 
