updating vimrc and tmux.conf

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -23,15 +23,16 @@ bind l selectp -R # switch to panel Right
 
 
 #Ctrl+b+Up/Down/Left/Right will adjust the pane size
-bind-key -n C-b-Up resize-pane -U 15
-bind-key -n C-b-Down resize-pane -D 15
-bind-key -n C-b-Left resize-pane -L 15
-bind-key -n C-b-Right resize-pane -R 15
+# bind-key -n C-b-Up resize-pane -U 15
+# bind-key -n C-b-Down resize-pane -D 15
+# bind-key -n C-b-Left resize-pane -L 15
+# bind-key -n C-b-Right resize-pane -R 15
 
 #Select Pane with mouse
-set -g mouse-select-pane on
+#set -g mouse-select-pane on
 #Resize Pane with mouse
-set -g mouse-resize-pane on
+#set -g mouse-resize-pane on
+set -g mouse on
 
 #Allow vim colors to appear in tmux
 set -g default-terminal "xterm-256color"
