--- a/tmux-install.yml
+++ b/tmux-install.yml
@@ -1,5 +1,5 @@
-# f20 yum dependencies
-# httpd httpd-tools libX11-devel libXtst-devel libXt-devel libSM-devel libXpm-devel ncurses-devel python2-devel gtk2-devel ruby-devel python3-devel
+# CentOS 7 yum dependencies
+# libeven-devel automake bison
 
     - hosts: 127.0.0.1
       connection: local
@@ -31,8 +31,4 @@
             state: link
             src: "{{ playbook_dir }}/.tmux.conf"
             path: "{{ ansible_env.HOME }}/.tmux.conf"
-
-    
-
-
-
+            force: yes
