--- a/tmux.conf
+++ b/tmux.conf
@@ -3,6 +3,7 @@ bind '"' split-window -c "#{pane_current_path}"
 bind '%' split-window -h -c "#{pane_current_path}"
 bind 'c' new-window -c "#{pane_current_path}"
 
+#older tmux options, tmux 1.8
 # setw -g mode-mouse on
 # set -g mouse-select-pane on
 # set -g mouse-resize-pane on
@@ -22,16 +23,20 @@ bind h selectp -L # switch to panel Left
 bind l selectp -R # switch to panel Right
 
 
+#older tmux options, tmux 1.8
 #Ctrl+b+Up/Down/Left/Right will adjust the pane size
 # bind-key -n C-b-Up resize-pane -U 15
 # bind-key -n C-b-Down resize-pane -D 15
 # bind-key -n C-b-Left resize-pane -L 15
 # bind-key -n C-b-Right resize-pane -R 15
 
+#older tmux options, tmux 1.8
 #Select Pane with mouse
 #set -g mouse-select-pane on
 #Resize Pane with mouse
 #set -g mouse-resize-pane on
+
+#tmux 2.0 option
 set -g mouse on
 
 #Allow vim colors to appear in tmux
