--- a/tmux.conf
+++ b/tmux.conf
@@ -1,3 +1,5 @@
+# source-file /path/to/tmux.conf
+
 
 bind '"' split-window -c "#{pane_current_path}"
 bind '%' split-window -h -c "#{pane_current_path}"
