adding llvm and YouCompleteMe build scripts

--- a/vim-install.yml
+++ b/vim-install.yml
@@ -9,15 +9,32 @@
       connection: local
       tasks: 
 
+        - name: Install dependencies
+          yum: 
+            name:
+                - httpd 
+                - httpd-tools 
+                - libX11-devel 
+                - libXtst-devel 
+                - libXt-devel 
+                - libSM-devel 
+                - libXpm-devel 
+                - ncurses-devel 
+                - python2-devel 
+                - gtk2-devel 
+                - ruby-devel 
+                - python36-devel 
+                - cmake
+            state:  installed
         - name: Download VIM 8.x
           git:
               repo: 'https://github.com/vim/vim.git'
               clone: yes
               dest: './github/vim'
-              version: 'v8.1.1142' #Disable if you want the latest
+              #version: 'v8.1.1142' #Disable if you want the latest
 
         - name: Configure VIM
-          command: ./configure --prefix={{ansible_env.HOME}}/vim-8.x/ --enable-rubyinterp=yes --enable-pythoninterp=yes   --with-python-config-dir=/usr/lib64/python2.7/config/ --enable-python3interp=yes --with-python3-config-dir=/usr/lib64/python3.6/config/ --enable-gui=gtk2 --enable-gnome-check --with-x
+          command: ./configure --prefix={{ansible_env.HOME}}/vim-8.x/ --enable-rubyinterp=yes --enable-python3interp=yes --with-python3-config-dir=/usr/lib64/python3.6/config/ --enable-gui=gtk2 --enable-gnome-check --with-x
           args: 
             chdir: ./github/vim/
             creates: src/auto/config.cache
@@ -59,19 +76,7 @@
           args:
             chdir: "{{ ansible_env.HOME }}/.vim/pack/default/start/command-t/ruby/command-t/ext/command-t/"
 
-        - name: VIM Plugin YouCompleteMe Git Clone
-          git:
-              repo: 'https://github.com/Valloric/YouCompleteMe.git'
-              clone: yes
-              dest: "{{ ansible_env.HOME }}/.vim/pack/default/start/YouCompleteMe"
-              #version: '3108b9bd4408b2af891eea179108bc9704e7263d' #March 16, This is a much later version. Having problems getting it to work. See notes below
-              version: '9dee2b4e3f5de5f8b9fdc4790eac35eb2c40257a' #Disable 'version' field if you want to get the latest
 
-        - name: VIM Plugin YouCompleteMe install
-          command: python3 install.py --clang-completer #git submodule sync --recursive;  git submodule update --init --recursive. sourcing the ycm vim file, returns 0 (fails) on has('python3') function.  
-          #command: python3 install.py --clangd-completer #git submodule sync --recursive;  git submodule update --init --recursive. sourcing the ycm vim file, returns 0 (fails) on has('python3') function.  Then fails on "Could not load library function PySys_SetArgv". Reverting to previous version. Try to disable signaturecall
-          args:
-            chdir: "{{ ansible_env.HOME }}/.vim/pack/default/start/YouCompleteMe"
 
         - name: VIM Plugin vim-illuminate Git Clone
           git:
