Updating to use hosts file

--- a/ij-install.yml
+++ b/ij-install.yml
@@ -1,11 +1,14 @@
-    - hosts: 127.0.0.1
-      connection: local
+# yum install --enablerepo="base" ant java-1.8.0-openjdk
+#Download: url: 'https://imagej.nih.gov/ij/download/src/ij152n-src.zip'
+#Download toolkit zip: https://sourceforge.net/projects/ij-plugins/files/ij-plugins_toolkit/v.2.1.0/
+    - hosts: myservers
+      #connection: local
       tasks: 
 
-        - name: Download ImageJ Zip
-          get_url:
-              url: 'https://imagej.nih.gov/ij/download/src/ij152n-src.zip'
-              dest: /tmp/ij.zip
+        #- name: Download ImageJ Zip
+        #  get_url:
+        #      url: 'https://imagej.nih.gov/ij/download/src/ij152n-src.zip'
+        #      dest: /tmp/ij.zip
 
         - name: Creates directory
           file:
@@ -14,7 +17,7 @@
 
         - name: Unzip ImageJ
           unarchive:
-              src: '/tmp/ij.zip'
+              src: "{{ playbook_dir }}/ij152n-src.zip"
               dest: '{{ ansible_env.HOME }}/imagej/'
 
         - name: Build ImageJ
@@ -22,13 +25,14 @@
           args: 
                 chdir: '{{ ansible_env.HOME }}/imagej/source'
 
-        - name: Download ImageJ IO Toolkit Plugins
-          get_url: 
-            url: 'https://downloads.sourceforge.net/project/ij-plugins/ij-plugins_toolkit/v.2.1.0/ijp-toolkit_bin_2.1.0.zip?r=https%3A%2F%2Fsourceforge.net%2Fprojects%2Fij-plugins%2Ffiles%2Fij-plugins_toolkit%2Fv.2.1.0%2Fijp-toolkit_bin_2.1.0.zip%2Fdownload&ts=1556037589'
-            dest: '/tmp/ijp.zip'
+        #- name: Download ImageJ IO Toolkit Plugins
+        #  get_url: 
+        #    url: 'https://downloads.sourceforge.net/project/ij-plugins/ij-plugins_toolkit/v.2.1.0/ijp-toolkit_bin_2.1.0.zip?r=https%3A%2F%2Fsourceforge.net%2Fprojects%2Fij-plugins%2Ffiles%2Fij-plugins_toolkit%2Fv.2.1.0%2Fijp-toolkit_bin_2.1.0.zip%2Fdownload&ts=1556037589'
+        #    dest: '/tmp/ijp.zip'
 
         - name: Unpack ImageJ IO Toolkit Plugins
           unarchive:
-            src: '/tmp/ijp.zip'
+            src: '{{ playbook_dir }}/ijp-toolkit_bin_2.1.0.zip'
             dest: '{{ ansible_env.HOME }}/imagej/source/plugins/'
+            #src: '/tmp/ijp.zip'
 
