--- a/vim/vim-plugins-install.yml
+++ b/vim/vim-plugins-install.yml
@@ -12,47 +12,20 @@
         command_t_ext_dir: "{{ vim_start_path }}/command-t/ruby/command-t/ext/command-t/"
       tasks: 
 
-        #- name: Install dependencies
-        #  yum: 
-        #    name:
-        #        - httpd 
-        #        - httpd-tools 
-        #        - libX11-devel 
-        #        - libXtst-devel 
-        #        - libXt-devel 
-        #        - libSM-devel 
-        #        - libXpm-devel 
-        #        - ncurses-devel 
-        #        - python2-devel 
-        #        - gtk2-devel 
-        #        - ruby-devel 
-        #        - python36-devel 
-        #        - cmake
-        #    state:  installed
-        #- name: Download VIM 8.x
-        #  git:
-        #      repo: 'https://github.com/vim/vim.git'
-        #      clone: yes
-        #      dest: './github/vim'
-        #      #version: 'v8.1.1142' #Disable if you want the latest
-
-        #- name: Configure VIM
-        #  command: ./configure --prefix={{ansible_env.HOME}}/vim-8.x/ --enable-rubyinterp=yes --enable-python3interp=yes --with-python3-config-dir=/usr/lib64/python3.6/config/ --enable-gui=gtk2 --enable-gnome-check --with-x
-        #  args: 
-        #    chdir: ./github/vim/
-        #    creates: src/auto/config.cache
-
-        #- name: Make VIM
-        #  command: make -j4 install
-        #  args: 
-        #    chdir: ./github/vim/
-        #    creates: src/vim
-
+        - name: Install dependencies
+          apt:
+              name:
+                 - ruby-dev
+                 - make
+          when:
+             - ansible_distribution == "Ubuntu"
+             #- ansible_distribution == "CentOS"
         - name: VIM Plugin gruvbox Git Clone
           git:
               repo: 'https://github.com/morhetz/gruvbox.git'
               clone: yes
               dest: "{{ vim_start_path }}/gruvbox"
+              depth: 1
               version: 'v3.0.1-rc.0' #Disable 'version' field if you want to get the latest
 
         - name: VIM Plugin airline Git Clone
@@ -60,6 +33,7 @@
               repo: 'https://github.com/vim-airline/vim-airline.git'
               clone: yes
               dest: "{{ vim_start_path }}/airline"
+              depth: 1
               version: 'v0.10' #Disable 'version' field if you want to get the latest
 
         - name: VIM Plugin command-t Git Clone
@@ -67,6 +41,7 @@
               repo: 'https://github.com/wincent/command-t.git'
               clone: yes
               dest: "{{ vim_start_path }}/command-t"
+              depth: 1
               version: '5.0.3' #Disable 'version' field if you want to get the latest
 
 #For Mac need to specify the homebrew version of ruby instead of the system one
@@ -80,14 +55,20 @@
           args:
             chdir: "{{ command_t_ext_dir }}"
 
-
-
         - name: VIM Plugin vim-illuminate Git Clone
           git:
               repo: 'https://github.com/RRethy/vim-illuminate.git'
               clone: yes
               dest: "{{ vim_start_path }}/vim-illuminate"
+              depth: 1
               #version: '9dee2b4e3f5de5f8b9fdc4790eac35eb2c40257a' #Disable 'version' field if you want to get the latest
+
+        - name: VIM Plugin Fugitive Git Clone
+          git:
+              repo: 'https://github.com/tpope/vim-fugitive.git'
+              clone: yes
+              dest: "{{ vim_start_path }}/vim-fugitive"
+              depth: 1
 
         - name: Create bh Directory
           ansible.builtin.file: 
