--- a/vim/vim-plugins-install.yml
+++ b/vim/vim-plugins-install.yml
@@ -8,8 +8,11 @@
     - hosts: myservers
       #connection: local
       vars:
+        neovim_start_path: "/home/bh/.local/share/nvim/site/pack/"
+        neovim_command_t_ruby_dir: "{{ neovim_start_path }}/command-t/start/command-t/ruby/command-t/ext/command-t/"
+        neovim_command_t_lua_dir: "/home/bh/.local/share/nvim/site/pack/command-t/start/command-t/lua/wincent/commandt/lib"
         vim_start_path: "{{ ansible_env.HOME }}/.vim/pack/default/start/"
-        command_t_ext_dir: "{{ vim_start_path }}/command-t/ruby/command-t/ext/command-t/"
+        vim_command_t_ext_dir: "{{ vim_start_path }}/command-t/ruby/command-t/ext/command-t/"
       tasks: 
 
         - name: Install dependencies
@@ -28,11 +31,27 @@
               depth: 1
               version: 'v3.0.1-rc.0' #Disable 'version' field if you want to get the latest
 
+        - name: Neovim Plugin gruvbox Git Clone
+          git:
+              repo: 'https://github.com/morhetz/gruvbox.git'
+              clone: yes
+              dest: "{{ neovim_start_path }}/gruvbox/start/gruvbox"
+              depth: 1
+              version: 'v3.0.1-rc.0' #Disable 'version' field if you want to get the latest
+
         - name: VIM Plugin airline Git Clone
           git:
               repo: 'https://github.com/vim-airline/vim-airline.git'
               clone: yes
               dest: "{{ vim_start_path }}/airline"
+              depth: 1
+              version: 'v0.10' #Disable 'version' field if you want to get the latest
+
+        - name: Neovim Plugin airline Git Clone
+          git:
+              repo: 'https://github.com/vim-airline/vim-airline.git'
+              clone: yes
+              dest: "{{ neovim_start_path }}/airline/start/airline"
               depth: 1
               version: 'v0.10' #Disable 'version' field if you want to get the latest
 
@@ -44,22 +63,44 @@
               depth: 1
               version: '5.0.3' #Disable 'version' field if you want to get the latest
 
+
 #For Mac need to specify the homebrew version of ruby instead of the system one
-        - name: VIM Plugin command-t install
+        - name: VIM Plugin command-t Ruby build step 1
           command: ruby extconf.rb
           args:
-            chdir: "{{ command_t_ext_dir }}"
+            chdir: "{{ vim_command_t_ext_dir }}"
 
-        - name: VIM Plugin command-t make
+        - name: VIM Plugin command-t Ruby build step 2
           command: make
           args:
-            chdir: "{{ command_t_ext_dir }}"
+            chdir: "{{ vim_command_t_ext_dir }}"
+
+#Command-T after 6.0 only supports Lua instead of Ruby.
+        - name: Neovim Plugin command-t Git Clone
+          git:
+              repo: 'https://github.com/wincent/command-t.git'
+              clone: yes
+              dest: "{{ neovim_start_path }}/command-t/start/command-t/"
+              depth: 1
+              #version: '5.0.5' #Disable 'version' field if you want to get the latest
+
+        - name: Neovim Plugin command-t LUA build 
+          command: make
+          args:
+            chdir: "{{ neovim_command_t_lua_dir }}"
 
         - name: VIM Plugin vim-illuminate Git Clone
           git:
               repo: 'https://github.com/RRethy/vim-illuminate.git'
               clone: yes
               dest: "{{ vim_start_path }}/vim-illuminate"
+              depth: 1
+
+        - name: Neovim Plugin vim-illuminate Git Clone
+          git:
+              repo: 'https://github.com/RRethy/vim-illuminate.git'
+              clone: yes
+              dest: "{{ neovim_start_path }}/vim-illuminate/start/vim-illuminate"
               depth: 1
               #version: '9dee2b4e3f5de5f8b9fdc4790eac35eb2c40257a' #Disable 'version' field if you want to get the latest
 
@@ -68,6 +109,13 @@
               repo: 'https://github.com/tpope/vim-fugitive.git'
               clone: yes
               dest: "{{ vim_start_path }}/vim-fugitive"
+              depth: 1
+
+        - name: Neovim Plugin Fugitive Git Clone
+          git:
+              repo: 'https://github.com/tpope/vim-fugitive.git'
+              clone: yes
+              dest: "{{ neovim_start_path }}/vim-fugitive/start/vim-fugitive"
               depth: 1
 
         - name: Create bh Directory
