updating vim install for ubuntu

--- a/vim/build-deps.yml
+++ b/vim/build-deps.yml
@@ -36,6 +36,13 @@
                  - doxygen
                  - ripgrep
                  - watchman
+                 - python3-dev
+                 - libx11-dev
+                 - libxext-dev
+                 - libxrender-dev
+                 - libxt-dev
+                 - libxrandr-dev
+
           
           when:
              - ansible_distribution == "Ubuntu"
